welcome.lessons.welcome.methods.basics.Methods.scala.code
def goAndGet() {
  
  do {
    var pas=0
    avance()
    pas=pas+1
  } while (!estSurBiscuit)
  prendBiscuit()
  recule(pas)
}

for (i <- 1 to 7) {
    goAndGet();
    right();
    forward();
    left();
}